# utvm_staticrt_codegen

./: .gitignore
cmake/: LinkTVM.cmake
examples/: codegen.py  run_flow.sh  utvm_gen_graph_and_params.py
examples/target_src/: CMakeLists.txt  main.c
examples/temp/: archive.tar  metadata.json
examples/temp/executor-config/graph/: graph.json
examples/temp/parameters/: default.params
examples/temp/src/: relay.txt
